# digit_recognizer

./: .gitignore  CMakeLists.txt
source/: declarations.h  main.cpp  minist_loader.h  net.cpp  neural-net.cpp  neuron.cpp  pixel_field.h  training_data.cpp
